2008-11-02  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala:

	Fix comment generation of private enums, patch by Carlos Cadete,
	fixes bug 558533

2008-11-02  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala:
	* vala/valagenieparser.vala:
	* vala/valainterface.vala:
	* vala/valainterfacewriter.vala:
	* vala/valaparser.vala:
	* vala/valasemanticanalyzer.vala:
	* gobject/valaccodebasemodule.vala:
	* gobject/valaccodemethodmodule.vala:
	* gobject/valaclassregisterfunction.vala:
	* gobject/valagobjectclassmodule.vala:
	* gobject/valagobjectinterfacemodule.vala:

	Drop deprecated support for static classes and interfaces

2008-11-02  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Add errno and g_strerror bindings

2008-11-02  Jürg Billeter  <j@bitron.ch>

	* gobject/valadbusclientmodule.vala:

	Support GHashTable in D-Bus clients, patch by Marc-André Lureau

2008-11-02  Jürg Billeter  <j@bitron.ch>

	* vala/valadatatype.vala:
	* vapi/glib-2.0.vapi:

	Return the right D-Bus type signature for GHashTable,
	patch by Marc-André Lureau

2008-11-02  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala:
	* gobject/valaccodeinvocationexpressionmodule.vala:
	* gobject/valaccodemethodmodule.vala:

	Add partial support for calling coroutines from other coroutines

2008-11-02  Jürg Billeter  <j@bitron.ch>

	* vala/valamethodtype.vala:
	* gobject/valaccodegenerator.vala:

	Add member `begin' to coroutines

2008-11-02  Jürg Billeter  <j@bitron.ch>

	* vala/Makefile.am:
	* vala/valaattributeprocessor.vala:
	* vala/valaclass.vala:
	* vala/valaenum.vala:
	* vala/valasemanticanalyzer.vala:
	* vala/valastruct.vala:
	* compiler/valacompiler.vala:
	* vapigen/valagidlparser.vala:
	* vapigen/valavapigen.vala:

	Move attribute processing to semantic analyzer

2008-11-01  Jürg Billeter  <j@bitron.ch>

	* vala/valamethod.vala:
	* ccode/valaccodeblock.vala:
	* gobject/valaccodebasemodule.vala:
	* gobject/valaccodegenerator.vala: