@@ -1,3 +1,12 @@
+2008-11-03  Jürg Billeter  <j@bitron.ch>
+
+	* gobject/Makefile.am:
+	* gobject/valaccodearraymodule.vala:
+	* gobject/valaccodeelementaccessmodule.vala:
+	* gobject/valaccodegenerator.vala:
+
+	Move element access handling to CCodeArrayModule
+
 2008-11-02  Jürg Billeter  <j@bitron.ch>
 
 	* gobject/valaccodegenerator.vala:
